# 3D-Reconstruction-Project

./: Definitions.h  README.md  resource.h
3D scan/OpenNi_test/: CmakeLists.txt  read_from_primesense.cpp
3D scan/OpenNi_test/zjh/: main_ini.cpp
3D scan/RGB-D slam/: CMakeLists.txt  parameters.txt  parameters_my_desk.txt  parameters_my_desk_with_new_intri.txt  parameters_old.txt  parameters_three_toys.txt
3D scan/RGB-D slam/include/: slamBase.h
3D scan/RGB-D slam/src/: CMakeLists.txt  generatePointCloud.cpp  slam.cpp  slamBase.cpp
3D scan/realsense_scan/: CMakeLists.txt  example.hpp  parameters.txt  parameters_back.txt  readFromRealsense.cpp  readRGBandDEPTH.cpp  scan.cpp  scan_from_file.cpp  scan_from_file_merge_all.cpp
3D scan/rgbdslam_realtime/: parameters.txt
3D scan/rgbdslam_realtime/include/: slamBase.h
3D scan/rgbdslam_realtime/src/: CMakeLists.txt  slam.cpp  slamBase.cpp
3D_scan_MAC/native-ICP/: readRGBandDEPTH.cpp  scan.cpp
3D_scan_MAC/rgbd-slam/: generatePointCloud.cpp  parameters_books.txt  parameters的副本.txt  slam.cpp  slamBase.cpp
hand-pose-control-powerpoint/: main.cpp
